# hass-tryfi

./: .coveragerc  .devcontainer.json  .gitignore  README.md  device_info_analysis.py  fragment_analysis.json  full_household_data.json  hacs.json  known_mutations.json  pyproject.toml  requirements_test.txt  run-tests.sh  setup.cfg  tryfi_api_discovery_report.md  tryfi_api_exploration_report.md  tryfi_api_explorer.py  tryfi_api_explorer_v2.py  tryfi_api_report_v2.md  tryfi_findings.json  working_queries.md
.github/workflows/: combined.yaml
custom_components/tryfi/: __init__.py  _pytryfi_loader.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  light.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py
custom_components/tryfi/pytryfi/: __init__.py  const.py  exceptions.py  fiBase.py  fiDevice.py  fiPet.py  fiUser.py  fiWifiNetwork.py
custom_components/tryfi/pytryfi/common/: query.py
custom_components/tryfi/translations/: en.json
tests/: README.md  common.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_device_tracker.py  test_entity_base.py  test_error_handling.py  test_init.py  test_integration.py  test_light.py  test_manifest.py  test_pytryfi.py  test_reauth.py  test_select.py  test_sensor.py
tests/pytryfi/: fixture_petHealthTrends.json  test_pet.py  test_pytryfi.py  test_query.py  utils.py
