[project]
name = "hass-tryfi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
]

[tool.ruff.lint]
ignore = [
    "F405",
    "F403",
    "E722"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
